--- a/views/admin.html
+++ b/views/admin.html
@@ -36,7 +36,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li <?php if(App::getRouters()->getController()=='book'): ?> class="active" <?php endif ?> ><a href="/admin/book/index">Books</a></li>
+            <li <?php if(App::getRouters()->getController()=='book'): ?> class="active" <?php endif ?> ><a href="/admin/book/list">Books</a></li>
             <li><a href="/admin/security/users">Users</a></li>
             <li <?php  if(App::getRouters()->getController()=='contact'): ?> class="active" <?php endif ?> ><a href="/admin/contact/message">Messages</a></li>
           </ul>
