--- a/views/book/admin_list.html
+++ b/views/book/admin_list.html
@@ -28,7 +28,7 @@
 
 <a href="/admin/book/edit_form_book/<?=$book->getId()?>" ><button type="button" class="btn btn-primary">Edit</button> </a> <br><br>
 
-<a href="#"><button type="button" class="btn btn-danger">Delete</button>  </a>
+<a href="/admin/book/delete_book/<?=($book->getId())?>"><button type="button" class="btn btn-danger">Delete</button>  </a>
 
 
 </td>
