--- a/views/contact/admin_message.html
+++ b/views/contact/admin_message.html
@@ -21,9 +21,9 @@
 <td><?=($message->getDate())?> </td>
 <td>  
 
-<a href="#"><button type="button" class="btn btn-primary">Edit</button> </a> <br><br>
 
-<a href="#"><button type="button" class="btn btn-danger">Delete</button>  </a>
+
+<a href="/admin/contact/message_delete/<?=($message->getId())?>"><button type="button" class="btn btn-danger">Delete</button>  </a>
 
 
 </td>
