--- a/views/default.html
+++ b/views/default.html
@@ -37,7 +37,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li <?php if(App::getRouters()->getController()=='book'): ?> class="active" <?php endif ?> ><a href="/book/index">Books</a></li>
+            <li <?php if(App::getRouters()->getController()=='book'): ?> class="active" <?php endif ?> ><a href="/book/list">Books</a></li>
             <li><a href="/security/login">Login</a></li>
             <li <?php  if(App::getRouters()->getController()=='contact'): ?> class="active" <?php endif ?> ><a href="/contact/index">Contact</a></li>
           </ul>
