--- a/views/contact/admin_message.html
+++ b/views/contact/admin_message.html
@@ -1,12 +1,81 @@
 <table class="table table-striped ">
     
 <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Message</th>
-        <th>Date</th>
-        <th>Action</th>
+        <th>
+                
+           <div>
+        <div class="text">Id </div>    
+                         <div class="sort_foto"> <a href="/admin/contact/message/up/1" >  <img src="/img/up.jpg"></img><br>  </a>
+                         </div>
+ 
+                         <div class="sort_foto"> <a href="/admin/contact/message/down/1" >   <img src="/img/down.jpg"></img><br>  </a>
+                         </div>
+        
+                </div>        
+                
+                </th>
+                
+                
+        <th>
+        <div>
+        <div class="text">Name </div>    
+                         <div class="sort_foto"> <a href="/admin/contact/message/up/2" >  <img src="/img/up.jpg"></img><br>  </a>
+                         </div>
+ 
+                         <div class="sort_foto"> <a href="/admin/contact/message/down/2" >   <img src="/img/down.jpg"></img><br>  </a>
+                         </div>
+        
+                </div>   
+        
+        </th>
+        <th>
+        
+       <div>
+        <div class="text">Email </div>    
+                         <div class="sort_foto"> <a href="/admin/contact/message/up/3" >  <img src="/img/up.jpg"></img><br>  </a>
+                         </div>
+ 
+                         <div class="sort_foto"> <a href="/admin/contact/message/down/3" >   <img src="/img/down.jpg"></img><br>  </a>
+                         </div>
+        
+                </div>   
+        
+        
+        </th>
+        
+        <th>
+          <div>
+        <div class="text">Message </div>    
+                         <div class="sort_foto"> <a href="/admin/contact/message/up/4" >  <img src="/img/up.jpg"></img><br>  </a>
+                         </div>
+ 
+                         <div class="sort_foto"> <a href="/admin/contact/message/down/4" >   <img src="/img/down.jpg"></img><br>  </a>
+                         </div>
+        
+                </div>      
+             
+                
+                </th>
+        <th>
+             <div>
+        <div class="text">Date </div>    
+                         <div class="sort_foto"> <a href="/admin/contact/message/up/5" >  <img src="/img/up.jpg"></img><br>  </a>
+                         </div>
+ 
+                         <div class="sort_foto"> <a href="/admin/contact/message/down/5" >   <img src="/img/down.jpg"></img><br>  </a>
+                         </div>
+        
+                </div>    
+                
+                </th>
+        <th>
+             <div>
+        <div class="text">Action </div>    
+                         
+        
+                </div>    
+                
+                </th>
 </tr>
 
 <?php foreach ($data as $message) : ?>
