--- a/views/security/admin_users.html
+++ b/views/security/admin_users.html
@@ -1,11 +1,69 @@
 <table  style="width:100%;"  class="table table-striped ">
     
 <tr>
-        <th style="width:5%;" >Id</th>
-        <th style="width:20%;" >Email</th>
-        <th  >Password</th>
-        <th style="width:20%;" >Role</th>
-        <th style="width:20%;" >Action</th>
+        <th style="width:10%;" >
+        
+        <div>
+        <div class="text">Id </div>    
+                         <div class="sort_foto"> <a href="/admin/security/users/up/1" >  <img src="/img/up.jpg"></img><br>  </a>
+                         </div>
+ 
+                         <div class="sort_foto"> <a href="/admin/security/users/down/1" >   <img src="/img/down.jpg"></img><br>  </a>
+                         </div>
+        
+                </div>  
+        
+        </th>
+        <th style="width:20%;" >
+          <div>
+        <div class="text">Email </div>    
+                         <div class="sort_foto"> <a href="/admin/security/users/up/2" >  <img src="/img/up.jpg"></img><br>  </a>
+                         </div>
+ 
+                         <div class="sort_foto"> <a href="/admin/security/users/down/2" >   <img src="/img/down.jpg"></img><br>  </a>
+                         </div>
+        
+                </div>        
+                
+                
+                </th>
+        <th  >
+            <div>
+        <div class="text">Password </div>    
+                         <div class="sort_foto"> <a href="/admin/security/users/up/3" >  <img src="/img/up.jpg"></img><br>  </a>
+                         </div>
+ 
+                         <div class="sort_foto"> <a href="/admin/security/users/down/3" >   <img src="/img/down.jpg"></img><br>  </a>
+                         </div>
+        
+                </div>    
+                
+                
+                </th>
+        <th style="width:20%;" >
+               <div>
+        <div class="text">Role </div>    
+                         <div class="sort_foto"> <a href="/admin/security/users/up/4" >  <img src="/img/up.jpg"></img><br>  </a>
+                         </div>
+ 
+                         <div class="sort_foto"> <a href="/admin/security/users/down/4" >   <img src="/img/down.jpg"></img><br>  </a>
+                         </div>
+        
+                </div>   
+                
+                
+                
+                </th>
+        <th style="width:20%;" >
+                
+                <div>
+        <div class="text">Action </div>    
+                         
+        
+                </div>   
+                
+                
+                </th>
 </tr>
 
 <?php foreach ($data as $user) : ?>
