--- a/views/admin.html
+++ b/views/admin.html
@@ -37,7 +37,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li <?php if(App::getRouters()->getController()=='book'): ?> class="active" <?php endif ?> ><a href="/admin/book/list">Books</a></li>
-            <li><a href="/admin/security/users">Users</a></li>
+            <li <?php if(App::getRouters()->getController()=='security'): ?> class="active" <?php endif ?>   ><a href="/admin/security/users">Users</a></li>
             <li <?php  if(App::getRouters()->getController()=='contact'): ?> class="active" <?php endif ?> ><a href="/admin/contact/message">Messages</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -51,7 +51,8 @@
 
       <div class="starter-template">
         
-        <?php  if(Session::hasFlash()){  ?>
+        <?php   
+                  if(Session::hasFlash()){  ?>
      
      
     <div class="alert alert-success" role="alert">
