--- a/views/security/login.html
+++ b/views/security/login.html
@@ -22,4 +22,4 @@
 </form> 
 
 <br>
-<a href="/security/register"> Register</a>
+<a href="/security/registers"> <button type="button" class="btn btn-warning">Register</button></a>
