--- a/views/security/register.html
+++ b/views/security/register.html
@@ -21,9 +21,9 @@
     <br>
     <button type="submit" class="btn-lg btn-block btn-primary">Register</button>
   
-</form> 
+</form> <br>
 
-
+<img src="/captcha.php">
 
 
 
