--- a/views/admin.html
+++ b/views/admin.html
@@ -37,8 +37,32 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li <?php if(App::getRouters()->getController()=='book'): ?> class="active" <?php endif ?> ><a href="/admin/book/list">Books</a></li>
+            
+            
+            
             <li <?php if(App::getRouters()->getController()=='security'): ?> class="active" <?php endif ?>   ><a href="/admin/security/users">Users</a></li>
+            
+            
+            
+            
+            
             <li <?php  if(App::getRouters()->getController()=='contact'): ?> class="active" <?php endif ?> ><a href="/admin/contact/message">Messages</a></li>
+            
+            
+            <?php  if(Session::has('user'))   {      ?>
+            
+            <li  ><a href="/security/logout">Logout</a></li>
+            
+            <li> <a>  USER: <?=Session::get('user')?> </a>   </li>
+            
+            
+            <?php }  else {  ?>
+            
+            <li <?php if(App::getRouters()->getController()=='security'): ?> class="active" <?php endif ?> ><a href="/security/login">Login</a></li>
+            
+            <?php } ?>
+            
+            
           </ul>
         </div><!--/.nav-collapse -->
       </div>
