--- a/views/default.html
+++ b/views/default.html
@@ -38,7 +38,22 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li <?php if(App::getRouters()->getController()=='book'): ?> class="active" <?php endif ?> ><a href="/book/list">Books</a></li>
+            
+            
+            <?php  if(Session::has('user'))   {      ?>
+            
+            <li  ><a href="/security/logout">Logout</a></li>
+            
+            <li> <a>  USER: <?=Session::get('user')?> </a>   </li>
+            
+            
+            <?php }  else {  ?>
+            
             <li <?php if(App::getRouters()->getController()=='security'): ?> class="active" <?php endif ?> ><a href="/security/login">Login</a></li>
+            
+            <?php } ?>
+            
+            
             <li <?php  if(App::getRouters()->getController()=='contact'): ?> class="active" <?php endif ?> ><a href="/contact/index">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
