--- a/views/contact/admin_message.html
+++ b/views/contact/admin_message.html
@@ -92,7 +92,7 @@
 
 
 
-<a href="/admin/contact/message_delete/<?=($message->getId())?>"><button type="button" class="btn btn-danger">Delete</button>  </a>
+<a href="/admin/contact/message_delete/<?=($message->getId())?>"><button type="button" class="btn btn-danger"  onclick="return DeleteItem()" >Delete</button>  </a>
 
 
 </td>
