--- a/views/default.html
+++ b/views/default.html
@@ -54,7 +54,7 @@
             <?php } ?>
             
             
-            <li <?php  if(App::getRouters()->getController()=='contact'): ?> class="active" <?php endif ?> ><a href="/contact/index">Contact</a></li>
+            <li <?php  if(App::getRouters()->getController()=='contact'): ?> class="active" <?php endif ?> ><a href="/contact/send">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
