--- a/views/security/admin_users.html
+++ b/views/security/admin_users.html
@@ -80,7 +80,7 @@
 
 <a href="/admin/security/edit_form_user/<?=($user->getId())?>"><button type="button" class="btn btn-primary">Edit</button> </a> <br><br>
 
-<a href="/admin/security/delete_user/<?=($user->getId())?>"><button type="button" class="btn btn-danger">Delete</button>  </a>
+<a href="/admin/security/delete_user/<?=($user->getId())?>"><button type="button" class="btn btn-danger" onclick="return DeleteItem()"  >Delete</button>  </a>
 
 
 </td>
