--- a/views/security/register.html
+++ b/views/security/register.html
@@ -1,4 +1,5 @@
-<form method="post" action="">
+
+</form> <br><form method="post" action="">
   
     
     <div class="form-group">
@@ -17,18 +18,27 @@
       <input type="text" id="password"  name="confirm_password" class="form-control" placeholder="Confirm password">
     </div>
    
+     <br> 
+
      
+
+
+
+     <img src="/captcha.php">
+
+     <br> 
+    <div class="form-group">
+      <label for="captcha">Type the characters</label>
+      <input type="text" id="captcha"  name="captcha" class="form-control" placeholder="Type the characters">
+    </div>
+
+
+
+
     <br>
     <button type="submit" class="btn-lg btn-block btn-primary">Register</button>
   
 </form> <br>
-
-<img src="/captcha.php">
-
-
-
-
-
 
 
 
