--- a/views/admin.html
+++ b/views/admin.html
@@ -11,6 +11,7 @@
     
     
     <link rel="stylesheet" href="/css/style.css">
+    <script  src="/js/item.js"   >   </script>
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     
