--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -53,7 +53,21 @@ form {
     
 }
 
-.normal { padding: 10px 10px 10px 10px;        }
+.normal { margin: 20px 20px 20px 20px;
+       padding: 10px 10px 10px 10px;
+       float:left;
+       height: 300px;
+       width: 300px; 
+       outline: 2px solid #000; /* Чёрная рамка */
+        border: 3px solid #fff; /* Белая рамка */
+       text-align: center;
+    
+}
+
+
+
+
+
 
 .text {
        float:left;}
