--- a/src/Views/book/admin_list.html
+++ b/src/Views/book/admin_list.html
@@ -1,4 +1,8 @@
 
+ <a href="/admin/book/pdf" > <button type="button" class="btn btn-success">Download Pdf</button></a>
+<br>
+<br>
+
 
 <table class="table table-striped "  width="100%">
     
