--- a/src/Views/book/admin_list.html
+++ b/src/Views/book/admin_list.html
@@ -1,5 +1,10 @@
 
- <a href="/admin/book/pdf" > <button type="button" class="btn btn-success">Download Pdf</button></a>
+ <a href="/admin/book/pdf" > <button type="button" class="btn btn-success">Download Pdf</button></a> 
+ <a href="/admin/book/exel" > <button type="button" class="btn btn-info">Download Exel</button></a> 
+ <a href="/admin/book/add" style="aligns:right" > <button type="button" class=" class= btn btn-warning pull-right">Add Book</button></a> 
+
+ <?php Lib\Session::set('uri_back',$_SERVER[REQUEST_URI]);      ?>
+
 <br>
 <br>
 
